# cs-465-computer-security

./: .gitignore  README.md
homework/h01/FiniteFieldArithmetic/: CMakeLists.txt
homework/h01/FiniteFieldArithmetic/src/: CMakeLists.txt  main.cpp
homework/h02/: test.py
homework/hw10/: a.out  examine_stack.c  homework.txt
projects/p01-AES/: CMakeLists.txt
projects/p01-AES/src/: AESCrypto.cpp  AESCrypto.h  AESCryptosystem.cpp  AESCryptosystem.h  AESDefinitions.h  AESKey.cpp  AESKey.h  AESModes.h  CMakeLists.txt  CryptoMessage.cpp  CryptoMessage.h  EncryptedMessage.cpp  EncryptedMessage.h  main.cpp
projects/p02-HashAttack/: fastattack.py  hattack.py  log-collision.txt  shawrapper.py
projects/p02-HashAttack/data/: collision_average.csv  (+2 more)
projects/p03-MAC/: mac.py  mac.pyx  setup.py
projects/p04-DiffieHellman/: bar  dh.sage  foo
projects/p05-RSA/: rsa.sage
projects/p06-TLS/: execute.sh  output_cs460.byu.edu.txt  output_discover.com.txt  output_efirstbank.com.txt  output_facebook.com.txt  output_gmail.com.txt  output_instructure.com.txt  output_lds.org.txt  output_learningsuite.byu.edu.txt  output_mint.com.txt  output_stackoverflow.com.txt  script.py  sites.txt  table.txt
projects/p07-PasswordCrack/: create-password  generatepass.c  good-passwd  good-shadow  mypasswords  passwd  shadow  strong-passwd  strong-shadow  test  verystrong-passwd  verystrong-shadow  veryweak-passwd  veryweak-shadow  weak-passwd  weak-shadow
projects/project2-hat++/: CMakeLists.txt  HashAttackSimulator.cpp  HashAttackSimulator.h  SHA1Wrapper.cpp  SHA1Wrapper.h  main.cpp
(+4 files in other folders)
